--- a/config.jsonc
+++ b/config.jsonc
@@ -1,12 +1,18 @@
-// Load with --load-config examples/2.jsonc
-// Note that you must replace the image path to an existing image to display it.
-
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+    "logo": {
+	"type": "kitty",
+	"source": "~/.config/fastfetch/1.jpg",
+	"height": 12,
+	"width": 25,
+	"padding": {
+		"top": 1,
+		"left": 1
+	}
+	}, 
     "display": {
-        "separator": " "
+	"separator": " "
     },
-    "modules": [
+    "modules" : [
         {
             "type": "host",
             "key": "╭─󰌢",
@@ -100,5 +106,5 @@
             "format": "{ssid}",
             "keyColor": "38;5;14"
         }
-    ]
+	],
 }
